feat: added two new elements using <br>

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Ciao Mondo!</h1>
         <p>Pagina di prova HTML</p>
+        <h2>Esempio di prova dello strumento br </h2>
+        <p>In questo testo ho inserito: <br> "br" per andare a capo</p>
     </body>
 </html>
