feat: added meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html> <!-- nodo -->
 <html lang="it">
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="test page">
+        <meta name="keywords" content="HMTL, TEST">
+        <meta name="author" content="Marco">
         <title>Marco M. Cianci</title>
     </head>
     <body>
