feat: added google link

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
         <title>Marco M. Cianci</title>
     </head>
     <body>
+    <header>
         <h1>Ciao Mondo!</h1>
         <p>Pagina di prova HTML</p>
+    </header>
+    <section>
         <h2>Esempio di prova dello strumento br </h2>
         <p>In questo testo ho inserito: <br> "br" per andare a capo</p>
+        <h3>Esempio di prova del link tag 'a'</h3>
+        <p>Clicca <a href="www.google.com">qui</a> per navigare su Google</p>
+    </section>
     </body>
 </html>
