feat: image added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
         <h3>Esempio di prova del link tag 'a'</h3>
         <p>Clicca <a href="www.google.com">qui</a> per navigare su Google</p>
     </section>
+    <section>
+        <h2>Galleria Foto:</h2>
+        <img src="https://www.google.it/search?sca_esv=2c6693827cfe3781&sca_upv=1&q=immagine+universo+senza+copyright&uds=ADvngMg7YyA49Xn2N-8fJeWBvvGpAXrJuHWyF5um7FyD5_vZ4orrnNi-ef9p1VPrahfDyXRep9fnC4lGKfItp9g0fQPfGYI-8c_doSwOPqFDC6HD5bAtYb1ZGBl3g0jeuivDnJMcAOmYIE4QuKwKT9EfUqYCr-CkONM7Ct6a__FjjqqkxwoGGIcDthdkfO7Ogyz1KVZ0n9nEm5NFTNgtUAnvmTprgAvgKqNs47QFX1Ogh4OiigrrXocIshBpeozbC3kGJRlqXKS12qjY6w84a8PgcQqrsBYp3Q&udm=2&prmd=ivnsbz&sa=X&ved=2ahUKEwjpksO3v_eFAxXf2wIHHR63B70QtKgLegQIDRAB&biw=1305&bih=624&dpr=1.46#vhid=Xf756KnGCQYF1M&vssid=mosaic"
+        alt="universe image" width="500" height="600">
+    </section>
     </body>
 </html>
