feat: add table

--- a/index.html
+++ b/index.html
@@ -15,8 +15,38 @@
     <section>
         <h2>Esempio di prova dello strumento br </h2>
         <p>In questo testo ho inserito: <br> "br" per andare a capo</p>
+        <h3>L'elemento table</h3>
+        <table border="1">
+            <tr>
+                <th>A</th>
+                <th>B</th>
+                <th>C</th>
+            </tr>
+            <tr>
+                <td>A'</td>
+                <td>B'</td>
+                <td>C'</td>
+            </tr>
+            <tr>
+                <td>A''</td>
+                <td>B''</td>
+                <td>C''</td>
+            </tr>
+            <tr>
+                <td>A°</td>
+                <td>B°</td>
+                <td>C°</td>
+            </tr>
+            <tr>
+                <td>As</td>
+                <td>Bs</td>
+                <td>Cs</td>
+            </tr>
+        </table>
+    </section>
+    <section>
         <h3>Esempio di prova del link tag 'a'</h3>
-        <p>Clicca <a href="www.google.com">qui</a> per navigare su Google</p>
+        <p>Clicca <a href="https://www.google.com">qui</a> per navigare su Google</p>
     </section>
     <section>
         <h2>Galleria Foto:</h2>
