feat: tanella modificata

--- a/index.html
+++ b/index.html
@@ -17,31 +17,42 @@
         <p>In questo testo ho inserito: <br> "br" per andare a capo</p>
         <h3>L'elemento table</h3>
         <table border="1">
-            <tr>
-                <th>A</th>
-                <th>B</th>
-                <th>C</th>
-            </tr>
-            <tr>
-                <td>A'</td>
-                <td>B'</td>
-                <td>C'</td>
-            </tr>
-            <tr>
-                <td>A''</td>
-                <td>B''</td>
-                <td>C''</td>
-            </tr>
-            <tr>
-                <td>A°</td>
-                <td>B°</td>
-                <td>C°</td>
-            </tr>
-            <tr>
-                <td>As</td>
-                <td>Bs</td>
-                <td>Cs</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>A</th>
+                    <th>B</th>
+                    <th>C</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>A</th>
+                    <th>B</th>
+                    <th>C</th>
+                </tr>
+                <tr>
+                    <td>A'</td>
+                    <td>B'</td>
+                    <td>C'</td>
+                </tr>
+                <tr>
+                    <td>A''</td>
+                    <td>B''</td>
+                    <td>C''</td>
+                </tr>
+                <tr>
+                    <td>A°</td>
+                    <td>B°</td>
+                    <td>C°</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>As</td>
+                    <td>Bs</td>
+                    <td>Cs</td>
+                </tr>
+            </tfoot> 
         </table>
     </section>
     <section>
