feat: nuova pagina

--- a/index.html
+++ b/index.html
@@ -7,78 +7,17 @@
         <meta name="author" content="Marco">
         <title>Marco M. Cianci</title>
     </head>
-    <body>
-    <header>
-        <h1>Ciao Mondo!</h1>
-        <p>Pagina di prova HTML</p>
-    </header>
-    <section>
-        <h2>Esempio di prova dello strumento br </h2>
-        <p>In questo testo ho inserito: <br> "br" per andare a capo</p>
-        <h3>L'elemento table</h3>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                </tr>
-                <tr>
-                    <td>A'</td>
-                    <td>B'</td>
-                    <td>C'</td>
-                </tr>
-                <tr>
-                    <td>A''</td>
-                    <td>B''</td>
-                    <td>C''</td>
-                </tr>
-                <tr>
-                    <td>A°</td>
-                    <td>B°</td>
-                    <td>C°</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td>As</td>
-                    <td>Bs</td>
-                    <td>Cs</td>
-                </tr>
-            </tfoot> 
-        </table>
-    </section>
-    <section>
-        <h3>Esempio di prova del link tag 'a'</h3>
-        <p>Clicca <a href="https://www.google.com">qui</a> per navigare su Google</p>
-        <p>In questo <span style="border:1px solid black">paragrafo</span> ho usato lo strumento 'span'</p>  
-    </section>
-    <section>
-        <div>
-            <p>Primo paragrafo</p>
-        </div>
-        <div>
-            <p>Secondo paragrafo</p>
-        </div>
-    </section>
-    <section>
-        <h2>Galleria Foto:</h2>
-        <img src="https://www.google.it/search?sca_esv=2c6693827cfe3781&sca_upv=1&q=immagine+universo+senza+copyright&uds=ADvngMg7YyA49Xn2N-8fJeWBvvGpAXrJuHWyF5um7FyD5_vZ4orrnNi-ef9p1VPrahfDyXRep9fnC4lGKfItp9g0fQPfGYI-8c_doSwOPqFDC6HD5bAtYb1ZGBl3g0jeuivDnJMcAOmYIE4QuKwKT9EfUqYCr-CkONM7Ct6a__FjjqqkxwoGGIcDthdkfO7Ogyz1KVZ0n9nEm5NFTNgtUAnvmTprgAvgKqNs47QFX1Ogh4OiigrrXocIshBpeozbC3kGJRlqXKS12qjY6w84a8PgcQqrsBYp3Q&udm=2&prmd=ivnsbz&sa=X&ved=2ahUKEwjpksO3v_eFAxXf2wIHHR63B70QtKgLegQIDRAB&biw=1305&bih=624&dpr=1.46#vhid=Xf756KnGCQYF1M&vssid=mosaic"
-        alt="universe image" width="500" height="600">
-        <h3>Immagini una accanto all'altra</h3>
-        <div>
-            <img src="https://www.google.it/search?sca_esv=2c6693827cfe3781&sca_upv=1&q=immagine+universo+senza+copyright&uds=ADvngMg7YyA49Xn2N-8fJeWBvvGpAXrJuHWyF5um7FyD5_vZ4orrnNi-ef9p1VPrahfDyXRep9fnC4lGKfItp9g0fQPfGYI-8c_doSwOPqFDC6HD5bAtYb1ZGBl3g0jeuivDnJMcAOmYIE4QuKwKT9EfUqYCr-CkONM7Ct6a__FjjqqkxwoGGIcDthdkfO7Ogyz1KVZ0n9nEm5NFTNgtUAnvmTprgAvgKqNs47QFX1Ogh4OiigrrXocIshBpeozbC3kGJRlqXKS12qjY6w84a8PgcQqrsBYp3Q&udm=2&prmd=ivnsbz&sa=X&ved=2ahUKEwjpksO3v_eFAxXf2wIHHR63B70QtKgLegQIDRAB&biw=1305&bih=624&dpr=1.46#vhid=Xf756KnGCQYF1M&vssid=mosaic"
-            alt="universe image" width="500" height="600">
-            <img src="https://www.google.it/search?sca_esv=2c6693827cfe3781&sca_upv=1&q=immagine+universo+senza+copyright&uds=ADvngMg7YyA49Xn2N-8fJeWBvvGpAXrJuHWyF5um7FyD5_vZ4orrnNi-ef9p1VPrahfDyXRep9fnC4lGKfItp9g0fQPfGYI-8c_doSwOPqFDC6HD5bAtYb1ZGBl3g0jeuivDnJMcAOmYIE4QuKwKT9EfUqYCr-CkONM7Ct6a__FjjqqkxwoGGIcDthdkfO7Ogyz1KVZ0n9nEm5NFTNgtUAnvmTprgAvgKqNs47QFX1Ogh4OiigrrXocIshBpeozbC3kGJRlqXKS12qjY6w84a8PgcQqrsBYp3Q&udm=2&prmd=ivnsbz&sa=X&ved=2ahUKEwjpksO3v_eFAxXf2wIHHR63B70QtKgLegQIDRAB&biw=1305&bih=624&dpr=1.46#vhid=Xf756KnGCQYF1M&vssid=mosaic"
-            alt="universe image" width="500" height="600">
-        </div>
-    </section>
-    </body>
+    <main>
+       <section>
+            <h2>Esempio dell'uso di 'aside'</h2>
+            <p>Negli scacchi, se il re o la torre sono sotto attacco, allora non si può arroccare.</p>
+            <aside>L'arrocco è una mossa con la quale puoi mettere al sicuro il tuo re.</aside>
+       </section>
+       <section>
+        <h2>Seconda Parte</h2>
+       </section>
+       <footer>
+        <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
+       </footer>
+    </main>
 </html>
