feat: immagine responsiva

--- a/index.html
+++ b/index.html
@@ -6,18 +6,43 @@
         <meta name="keywords" content="HMTL, TEST">
         <meta name="author" content="Marco">
         <title>Marco M. Cianci</title>
+        <style>
+            aside {
+              width: 30%;
+              padding-left: 15px;
+              margin-left: 15px;
+              float: right;
+              font-style: italic;
+              background-color: lightgray;
+            }
+        </style>
     </head>
     <main>
        <section>
-            <h2>Esempio dell'uso di 'aside'</h2>
+            <h2>Prima Parte</h2>
+            <h3>Esempio dell'uso di 'aside'</h3>
             <p>Negli scacchi, se il re o la torre sono sotto attacco, allora non si può arroccare.</p>
             <aside>L'arrocco è una mossa con la quale puoi mettere al sicuro il tuo re.</aside>
        </section>
        <section>
         <h2>Seconda Parte</h2>
+        <h3>Immagine responsiva</h3>
+        <figure>
+            <img 
+            alt="Acqua" 
+            srcset="
+            acqua.png 1.5x,
+            acqua.png 2x,
+            acqua.png 3x,
+            acqua.png 10x,
+            acqua.png 50x,
+            acqua.png 100x
+            " >
+            <figcaption>Fig.1 - Acqua </figcaption>
+        </figure>
        </section>
        <footer>
-        <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
+          <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
        </footer>
     </main>
 </html>
