--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
        <section>
             <h2>Prima Parte</h2>
             <h3>Esempio dell'uso di 'aside'</h3>
-            <p>Negli scacchi, se il re o la torre sono sotto attacco, allora non si può arroccare.</p>
+            <p>Negli scacchi, se il re o la torre sono sotto attacco, allora non si può arroccare.
+                <br>Cos'è l'arrocco? Guarda a lato! ->
+            </p>
             <aside>L'arrocco è una mossa con la quale puoi mettere al sicuro il tuo re.</aside>
        </section>
        <section>
@@ -40,6 +42,11 @@
             " >
             <figcaption>Fig.1 - Acqua </figcaption>
         </figure>
+        <h4>"Dancing in the street"</h4>
+        <video controls width="320" height="240">
+            <source src="https://www.youtube.com/watch?v=o82d9T4D-8I" type="video">
+            Video non supportato :/
+        </video>
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
