--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <source src="https://www.youtube.com/watch?v=o82d9T4D-8I" type="video">
             Video non supportato :/
         </video>
+        <h5>Logo svg</h5>
+        <svg width="400" height="200">
+            <polygon points="100,10 40,198 190,78 10,78 160,198"
+            style="fill:red;stroke:yellow;stroke-width: 5;fill-rule: evenodd;"/>
+        </svg>
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
