feat: jpg to svg

--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@
             <img 
             alt="Acqua" 
             srcset="
-            acqua.png 1.5x,
-            acqua.png 2x,
-            acqua.png 3x,
-            acqua.png 10x,
-            acqua.png 50x,
-            acqua.png 100x
-            " >
+            img/acqua.png 1.5x,
+            img/acqua.png 2x,
+            img/acqua.png 3x,
+            img/acqua.png 10x,
+            img/acqua.png 50x,
+            img/acqua.png 100x " >
             <figcaption>Fig.1 - Acqua </figcaption>
         </figure>
         <h4>"Dancing in the street"</h4>
         <video controls width="320" height="240">
-            <source src="https://www.youtube.com/watch?v=o82d9T4D-8I" type="video">
+            <source src="https://www.youtube.com/watch?v=o82d9T4D-8I" type="">
             Video non supportato :/
         </video>
         <h5>Logo svg</h5>
@@ -52,6 +51,8 @@
             <polygon points="100,10 40,198 190,78 10,78 160,198"
             style="fill:red;stroke:yellow;stroke-width: 5;fill-rule: evenodd;"/>
         </svg>
+        <h6>JPG to SVG</h6>
+            <img src="img/R.svg" alt="img" style="width:auto">
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
