--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
                 <br>Cos'è l'arrocco? Guarda a lato! ->
             </p>
             <aside>L'arrocco è una mossa con la quale puoi mettere al sicuro il tuo re.</aside>
+            <h4>Liste</h4>
+            <ul style="list-style-type:georgian">
+                <li>Cani</li>
+                <li>Gatti</li>
+                <li>Conigli</li>
+            </ul>
+            <ol>
+                <li>Primo posto</li>
+                <li>Secondo Posto</li>
+                <li>Terzo posto</li>
+            </ol>
+            <dl>
+                <dt>P1</dt>
+                <dd>- Player 1</dd>
+                <dt>P2</dt>
+                <dd>- Player 2</dd>
+            </dl>
        </section>
        <section>
         <h2>Seconda Parte</h2>
