feat: input name

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
         <h6>JPG to SVG</h6>
             <img src="img/R.svg" alt="img" style="width:auto">
        </section>
+       <section>
+            <h2>I Form</h2>
+            <label>
+                Nome: 
+                <input type="text" name="nome" autocomplete="on" placeholder="Inserisci il tuo nome">
+            </label>
+            </form>
+       </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
        </footer>
