--- a/index.html
+++ b/index.html
@@ -73,10 +73,15 @@
        </section>
        <section>
             <h2>I Form</h2>
-            <label>
+            <label for="nome">
                 Nome: 
                 <input type="text" name="nome" autocomplete="on" placeholder="Inserisci il tuo nome">
             </label>
+            <br>
+            <label for="descrizione">Dicci di te:</label>
+            <textarea id="descrizione" name="descrizione" rows="4" cols="30">
+                Aggiungi qui una tua descrizione...
+            </textarea>
             </form>
        </section>
        <footer>
