--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@
                 Nome: 
                 <input type="text" name="nome" autocomplete="on" placeholder="Inserisci il tuo nome">
             </label>
-            <br>
+            <br><br>
             <label for="descrizione">Dicci di te:</label>
-            <textarea id="descrizione" name="descrizione" rows="4" cols="30">
-                Aggiungi qui una tua descrizione...
-            </textarea>
-            </form>
+            <textarea id="descrizione" name="descrizione" rows="4" cols="50">Aggiungi qui una tua descrizione...
+            </textarea><br><br>
+            Sei maschio o femmina?<br>
+            <label for="maschio">Maschio</label>
+            <input type="radio" id="maschio" name="genere" value="Maschio"><br>
+            <label for="femmina">Femmina</label>
+            <input type="radio" id="femmina" name="genere" value="Femmina"><br>
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
