feat: checkbox policy

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             <label for="maschio">Maschio</label>
             <input type="radio" id="maschio" name="genere" value="Maschio"><br>
             <label for="femmina">Femmina</label>
-            <input type="radio" id="femmina" name="genere" value="Femmina"><br>
+            <input type="radio" id="femmina" name="genere" value="Femmina"><br><br>
+            <input type="checkbox" id="policy" name="policy">
+            <label for="policy">Accetto termini e condizioni</label><br><br>
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
