--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
             <input type="radio" id="maschio" name="genere" value="Maschio"><br>
             <label for="femmina">Femmina</label>
             <input type="radio" id="femmina" name="genere" value="Femmina"><br><br>
-            <input type="checkbox" id="policy" name="policy">
+            <input type="checkbox" id="policy" name="policy" value="Policy" required>
             <label for="policy">Accetto termini e condizioni</label><br><br>
+            <input type="submit" value="Invia">
        </section>
        <footer>
           <p>Questa è una pagina di prova per l'utilizzo di html e css</p>
