--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
        </section>
        <section>
             <h2>I Form</h2>
-            <label for="nome">
-                Nome: 
-                <input type="text" name="nome" autocomplete="on" placeholder="Inserisci il tuo nome">
-            </label>
-            <br><br>
+            <label for="nome">Nome: </label> 
+            <input type="text" id="nome" name="nome" autocomplete="on" placeholder="Inserisci il tuo nome"><br><br>
+            <label for="cognome">Cognome: </label>
+            <input type="text" id="cognome" name="cognome" autocomplete="on" placeholder="Inserisci il tuo cognome"><br><br>
             <label for="descrizione">Dicci di te:</label>
-            <textarea id="descrizione" name="descrizione" rows="4" cols="50">Aggiungi qui una tua descrizione...
-            </textarea><br><br>
+            <textarea id="descrizione" name="descrizione" rows="4" cols="50">Aggiungi qui una tua descrizione...</textarea><br><br>
             Sei maschio o femmina?<br>
             <label for="maschio">Maschio</label>
             <input type="radio" id="maschio" name="genere" value="Maschio"><br>
