--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="test page">
         <meta name="keywords" content="HMTL, TEST">
         <meta name="author" content="Marco">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Marco M. Cianci</title>
         <style>
             aside {
