--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde suscipit corporis laborum! Similique accusantium eaque vero dolorum iure sapiente odio omnis error. Rem a quas aperiam fuga iure ex?</p>
+    <p class="i30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde suscipit corporis laborum! Similique accusantium eaque vero dolorum iure sapiente odio omnis error. Rem a quas aperiam fuga iure ex?</p>
     <h1>T</h1>
     <h2>I</h2>
-    <h3>T</h3>
+    <h3 class="i30px">T</h3>
     <h4>O</h4>
     <h5 id="tit5">L</h5>
-    <h6>O</h6>
+    <h6 class="i30px">O</h6>
 </body>
 </html>
