feat: multiple classes to one element

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h3 class="i30px">T</h3>
     <h4>O</h4>
     <h5 id="tit5">L</h5>
-    <h6 class="i30px">O</h6>
+    <h6 class="i30px" class="trasparency" class="bold" class="shadow">O</h6>
 </body>
 </html>
