--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
     <h5 id="tit5">L</h5>
     <h6 class="i30px" class="trasparency" class="bold" class="shadow">O</h6>
     <button type="submit">Invia</button>
+    <ul>
+        <li>Pippo</li>
+        <li>Pluto</li>
+        <li>Paperino</li>
+        <li>Mickey</li>
+        <li id="lastLi">Minnie</li>
+    </ul>
 </body>
 </html>
