--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <li>Mickey</li>
         <li id="lastLi">Minnie</li>
     </ul>
+    <p class="paragraph" id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos nulla iusto, officiis ullam accusantium ex suscipit, perspiciatis debitis quae ad quis. Veritatis aut officiis voluptate blanditiis ea! Impedit, similique.</p>
 </body>
 </html>
