feat: rgb color

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <li>Tre</li>
         </ul>
     </div>
+    <p id="p3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ipsam nesciunt fugiat minima doloribus! Eius, consequuntur consectetur nulla nesciunt doloribus, pariatur ratione dolorem ad officia voluptatem atque ducimus ipsum aliquam!</p>
 </body>
 </html>
