feat: hexadecimal color

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         </ul>
     </div>
     <p id="p3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ipsam nesciunt fugiat minima doloribus! Eius, consequuntur consectetur nulla nesciunt doloribus, pariatur ratione dolorem ad officia voluptatem atque ducimus ipsum aliquam!</p>
+    <p id="p4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam non amet nesciunt eum ea magnam fuga provident sapiente, neque sint labore nemo quos quibusdam quaerat tempora numquam magni in! Ratione?</p>
 </body>
 </html>
