feat: square with %

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Mickey</li>
         <li id="lastLi">Minnie</li>
     </ul>
+    
     <p class="paragraph" id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos nulla iusto, officiis ullam accusantium ex suscipit, perspiciatis debitis quae ad quis. Veritatis aut officiis voluptate blanditiis ea! Impedit, similique.</p>
     <div class="container">
         <h2>Titolo</h2>
@@ -36,5 +37,8 @@
     <p id="p4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam non amet nesciunt eum ea magnam fuga provident sapiente, neque sint labore nemo quos quibusdam quaerat tempora numquam magni in! Ratione?</p>
     <p id="p5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem id, ex minus impedit eveniet ipsam sunt sequi, reprehenderit dolor dolore neque voluptatem consectetur omnis numquam saepe. Porro laboriosam assumenda non.</p>
     <p id="p6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fuga itaque doloremque accusamus quod voluptates officiis doloribus pariatur sit magnam vitae quos deleniti provident, soluta incidunt consequatur facere repellat nemo?</p>
+    <div class="container_square">
+        <div class="square_1"></div>
+    </div>
 </body>
 </html>
