feat: square with px

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <div class="container_square">
         <div class="square_1"></div>
     </div>
+    <div class="square_2"></div>
 </body>
 </html>
