feat: em vs rem

--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
         <div class="square_1"></div>
     </div>
     <div class="square_2"></div>
+    <div class="em-rem">
+        <p class="rem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi nam atque aliquam laboriosam earum aspernatur maxime doloremque consectetur, adipisci fuga voluptatibus incidunt, veniam excepturi? Molestias maxime tenetur praesentium repudiandae expedita!</p>
+        <p class="em">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit saepe modi blanditiis porro consequatur ullam sit ad eos temporibus. Eveniet voluptates iste ipsum itaque, illum nemo doloremque et dignissimos dolorem?</p>
+    </div>
 </body>
 </html>
