--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
             <li><a href="#">C</a></li>
         </ul>
     </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing <span style="display: inline;">PAROLA</span> elit. Animi voluptas nulla fuga ratione, culpa libero beatae perspiciatis molestiae. <span style="display: inline-block;">PAROLA</span> Sequi exercitationem nostrum fuga magnam temporibus unde provident? <span style="display: block;">PAROLA</span> Ducimus rem et fugiat?</p>
+    </div>
 </body>
 </html>
