feat: span corretto

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
     <div>
         <div class="square_2"></div>
     </div>
-    <!--<div class="em-rem">
+    <div class="em-rem">
         <p class="rem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi nam atque aliquam laboriosam earum aspernatur maxime doloremque consectetur, adipisci fuga voluptatibus incidunt, veniam excepturi? Molestias maxime tenetur praesentium repudiandae expedita!</p>
         <p class="em">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit saepe modi blanditiis porro consequatur ullam sit ad eos temporibus. Eveniet voluptates iste ipsum itaque, illum nemo doloremque et dignissimos dolorem?</p>
-    </div>-->
+    </div>
     <div id="padd"></div>
     <div>
         <ul>
             <li><a href="#">A</a></li>
-            <li><a href="#">B</a></li>
+            <li><a href="#" data-b="3">B</a></li>
             <li><a href="#">C</a></li>
         </ul>
     </div>
     <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing <span style="display: inline;">PAROLA</span> elit. Animi voluptas nulla fuga ratione, culpa libero beatae perspiciatis molestiae. <span style="display: inline-block;">PAROLA</span> Sequi exercitationem nostrum fuga magnam temporibus unde provident? <span style="display: block;">PAROLA</span> Ducimus rem et fugiat?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing <span class="inline">PAROLA</span> elit. Animi voluptas nulla fuga ratione, culpa libero beatae perspiciatis molestiae. <span class="inline-block">PAROLA</span> Sequi exercitationem nostrum fuga magnam temporibus unde provident? <span class="block">PAROLA</span> Ducimus rem et fugiat?</p>
     </div>
 </body>
 </html>
