--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div>
         <div class="square_2"></div>
     </div>
-    <div class="em-rem">
+    <!--<div class="em-rem">
         <p class="rem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi nam atque aliquam laboriosam earum aspernatur maxime doloremque consectetur, adipisci fuga voluptatibus incidunt, veniam excepturi? Molestias maxime tenetur praesentium repudiandae expedita!</p>
         <p class="em">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit saepe modi blanditiis porro consequatur ullam sit ad eos temporibus. Eveniet voluptates iste ipsum itaque, illum nemo doloremque et dignissimos dolorem?</p>
-    </div>
+    </div>-->
     <div id="padd"></div>
     <div>
         <ul>
@@ -55,8 +55,11 @@
             <li><a href="#">C</a></li>
         </ul>
     </div>
-    <div>
+    <!--<div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing <span class="inline">PAROLA</span> elit. Animi voluptas nulla fuga ratione, culpa libero beatae perspiciatis molestiae. <span class="inline-block">PAROLA</span> Sequi exercitationem nostrum fuga magnam temporibus unde provident? <span class="block">PAROLA</span> Ducimus rem et fugiat?</p>
+    </div>-->
+    <div >
+        <p class="vanish">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet laudantium, voluptates natus cupiditate quos maiores, quibusdam optio sunt perferendis consequuntur ducimus provident error qui? Officia vero cumque iusto distinctio!</p>
     </div>
 </body>
 </html>
