--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     <div >
         <p class="vanish">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet laudantium, voluptates natus cupiditate quos maiores, quibusdam optio sunt perferendis consequuntur ducimus provident error qui? Officia vero cumque iusto distinctio!</p>
     </div>
-    <div>
+    <div class="card">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque rerum modi provident tenetur et quaerat inventore, veniam alias suscipit architecto officia neque illo perspiciatis voluptates maxime rem nisi adipisci animi!</p>
         <img class="float "src="img/OIP.jpg" alt="" />
+        <p class="clear">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti fuga deserunt optio sapiente quis et debitis esse dignissimos ab? Tempora aliquid iste ipsam pariatur at maiores illo, cupiditate ab consequatur?</p>
     </div>
 </body>
 </html>
