--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
         <img class="float "src="img/OIP.jpg" alt="" />
         <p class="clear">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti fuga deserunt optio sapiente quis et debitis esse dignissimos ab? Tempora aliquid iste ipsam pariatur at maiores illo, cupiditate ab consequatur?</p>
     </div>
+    <div class="three_columns">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus asperiores earum, facilis expedita impedit numquam vero est atque voluptates porro, sapiente exercitationem ratione minima vel. Autem porro maiores illo quidem?</p>
+        <p id="middle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis non fugit quidem, minus id consectetur a? Eveniet consectetur magnam, illum saepe necessitatibus fugit ducimus ipsa tempora perspiciatis ipsum reprehenderit quam?</p>
+        <p id="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quasi possimus adipisci similique est et debitis magnam, non reprehenderit ut, sint soluta tempora laboriosam vel mollitia excepturi voluptas quas praesentium.</p>
+    </div>
 </body>
 </html>
