--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+<header>
+    <nav>
+        <ul>
+            <li><a href="#">Nav</a></li>
+            <li><a href="#">Bar</a></li>
+            <li><a href="#">Yes</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
     <p class="i30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde suscipit corporis laborum! Similique accusantium eaque vero dolorum iure sapiente odio omnis error. Rem a quas aperiam fuga iure ex?</p>
     <h1><a href="#">T</a></h1>
