--- a/index.html
+++ b/index.html
@@ -81,4 +81,7 @@
         <p id="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quasi possimus adipisci similique est et debitis magnam, non reprehenderit ut, sint soluta tempora laboriosam vel mollitia excepturi voluptas quas praesentium.</p>
     </div>
 </body>
+<footer>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid rerum natus placeat earum rem beatae exercitationem eveniet adipisci vel? Cupiditate sapiente architecto enim, eos porro veniam voluptates debitis facere? Numquam!</p>
+</footer>
 </html>
