--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <header>
     <nav>
         <ul>
@@ -15,6 +16,7 @@
         </ul>
     </nav>
 </header>
+
 <body>
     <p class="i30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde suscipit corporis laborum! Similique accusantium eaque vero dolorum iure sapiente odio omnis error. Rem a quas aperiam fuga iure ex?</p>
     <h1><a href="#">T</a></h1>
@@ -31,7 +33,6 @@
         <li>Mickey</li>
         <li id="lastLi">Minnie</li>
     </ul>
-    
     <p class="paragraph" id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos nulla iusto, officiis ullam accusantium ex suscipit, perspiciatis debitis quae ad quis. Veritatis aut officiis voluptate blanditiis ea! Impedit, similique.</p>
     <div class="container">
         <h2>Titolo</h2>
@@ -80,7 +81,9 @@
         <p id="middle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis non fugit quidem, minus id consectetur a? Eveniet consectetur magnam, illum saepe necessitatibus fugit ducimus ipsa tempora perspiciatis ipsum reprehenderit quam?</p>
         <p id="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quasi possimus adipisci similique est et debitis magnam, non reprehenderit ut, sint soluta tempora laboriosam vel mollitia excepturi voluptas quas praesentium.</p>
     </div>
+    <div class="absolute_square"></div>
 </body>
+
 <footer>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid rerum natus placeat earum rem beatae exercitationem eveniet adipisci vel? Cupiditate sapiente architecto enim, eos porro veniam voluptates debitis facere? Numquam!</p>
 </footer>
