feat: fleex-box

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             <p id="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quasi possimus adipisci similique est et debitis magnam, non reprehenderit ut, sint soluta tempora laboriosam vel mollitia excepturi voluptas quas praesentium.</p>
         </div>
         <div class="absolute_square"></div>
+        <div class="flex-container">
+            <div class="flex-item1">Item1</div>
+            <div class="flex-item2">Item2</div>
+            <div class="flex-item3">Item3</div>
+        </div>
     </main>
 
     <footer>
