--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3 class="i30px">T</h3>
         <h4>O</h4>
         <h5 id="tit5">L</h5>
-        <h6 class="i30px" class="trasparency" class="bold" class="shadow">O</h6>
+        <h6 class="i30px trasparency bold shadow">O</h6>
         <button type="submit">Invia</button>
         <ul>
             <li>Pippo</li>
