feat: grid container

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
             <div class="flex-item2">Item2</div>
             <div class="flex-item3">Item3</div>
         </div>
+        <div class="grid_container">
+            <div class="grid_item">1</div>
+            <div class="grid_item">2</div>
+            <div class="grid_item">3</div>
+            <div class="grid_item">4</div>
+            <div class="grid_item">5</div>
+            <div class="grid_item">6</div>
+            <div class="grid_item">7</div>
+            <div class="grid_item">8</div>
+            <div class="grid_item">9</div>
+        </div>
     </main>
 
     <footer>
