--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             <div class="flex-item3">Item3</div>
         </div>-->
         <div class="grid-container">
-            <div class="grid-item">1</div>
+            <div class="grid-item1">1 4</div>
             <div class="grid-item">2</div>
             <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
+            <!--<div class="grid-item">4</div>-->
             <div class="grid-item">5</div>
             <div class="grid-item">6</div>
             <div class="grid-item">7</div>
